# acme-dns-rust

./: .gitignore  .woodpecker.yml  AUTHOR.md  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  acme-dns-rust.service  acme-dns.db  config.toml  migrate.sh
.github/workflows/: build-release.yml  test.yml
acme-dns-client-rust/: Cargo.toml
acme-dns-client-rust/src/: main.rs
migrations/: 20240101000000_initial_schema.sql  20260711000000_add_created_at_to_records.sql  20260715000000_add_has_updated_to_records.sql
src/: api.rs  auth.rs  cli.rs  config.rs  db.rs  dns.rs  lib.rs  main.rs
tests/: cleanup_test.rs  config_test.rs
tests/fixtures/: test_config.toml
