[package]
name = "acme-dns-rust"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "uuid", "macros"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
hickory-server = "0.24" # Formerly trust-dns-server
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
ipnetwork = "0.20"
cors = { package = "tower-http", version = "0.5", features = ["cors"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = { version = "0.5", features = ["util"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-webpki = { version = "0.103", default-features = false, features = ["ring"] }
webpki-roots = { version = "0.26", default-features = false }
axum-server = { version = "=0.7.3", default-features = false, features = ["tls-rustls"] }
rustls-pemfile = "2.1"
rcgen = "0.13"
rustls-acme = { version = "0.11", default-features = false, features = ["tokio", "ring"] }
tokio-stream = { version = "0.1", features = ["net"] }
rpassword = "7.3"
